# neoscopebuddy

./: .gitignore  AGENTS.md  DESIGN.md  Makefile  README.md  REPRODUCIBLE_BUILDS.md  flake.nix  nscb.py  nscb_test.py  pyproject.toml  test_nscb.py
src/: entry.py
src/nscb/: application.py  argument_processor.py  command_executor.py  config_manager.py  config_result.py  environment_helper.py  exceptions.py  gamescope_args.py  path_helper.py  profile_manager.py  system_detector.py  types.py
tests/: conftest.py  test_application.py  test_argument_processor.py  test_command_executor.py  test_config_manager.py  test_config_result.py  test_e2e.py  test_environment_helper.py  test_exceptions.py  test_gamescope_args.py  test_integrations.py  test_path_helper.py  test_profile_manager.py  test_system_detector.py  test_types.py  test_units.py
