[project]
name = "neoscopebuddy"
version = "1.0.0"
description = "A scopebuddy-like gamescope wrapper utility written in Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pytest>=8.4.2", "pytest-mock>=3.15.1", "slipcover>=1.0.17"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "e2e: End-to-end tests",
]
