[project]
name = "neoscopebuddy"
version = "1.1.3"
description = "A scopebuddy-like gamescope wrapper utility written in Python"
readme = "README.md"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "e2e: End-to-end tests",
]

[dependency-groups]
dev = [
  "prettier>=0.0.7",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "radon>=6.0.1",
  "ruff>=0.15.1",
  "ty>=0.0.17",
]
